# orthanc-cdk-deployment

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml
infrastructure/: .gitignore  cdk.context.json  cdk.json  package-lock.json  package.json
infrastructure/lib/: networking-stack.ts  orthanc-stack.ts  storage-stack.ts
infrastructure/lib/local-image-official-s3/: CMakeLists.txt  Dockerfile  custom-script.sh
